--- a/src/Css/Map.css
+++ b/src/Css/Map.css
@@ -1,11 +1,11 @@
 .mapContainer {
-    background-color: darkseagreen;
-    height:100%;
-    padding:0px;
+    height: 100%;
+    width: 100%;
 }
-.mapContainer h6{
-padding-top: 0px !important;
-padding-bottom: 0px !important;
-margin-bottom: 0px !important;
-margin-top: 0px !important;
+.googleMapComponent {
+    position: absolute !important;
+    width: 57.9%;
+    min-height: 100%;
+    overflow: hidden;
+    z-index: 1;
 }
