--- a/src/Css/ListingCard.css
+++ b/src/Css/ListingCard.css
@@ -22,3 +22,11 @@
     transform:scale(1.01);
 
 }
+
+.cardWrapperButton {
+    background-color: transparent;
+    text-align: left;
+    border: none;
+    width:100%;
+    padding:0px;
+}
