--- a/src/Css/ListingContainer.css
+++ b/src/Css/ListingContainer.css
@@ -7,6 +7,8 @@
     padding-right:0px !important;
     margin-right: 0px !important;
  z-index: 2;
+     -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;
 }
 
 .listingContainerCardContents{
